// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup can select a different item 1`] = `
<div
  aria-labelledby="test"
  name="radio"
  role="radiogroup"
>
  <RadioLineItem
    aria-checked={false}
    index={0}
    key="0"
    onClick={[Function]}
    role="radio"
  >
    <RadioLineButton
      type="button"
    />
    <RadioLineText>
      Choice One
    </RadioLineText>
  </RadioLineItem>
  <RadioLineItem
    aria-checked={false}
    index={1}
    key="1"
    onClick={[Function]}
    role="radio"
  >
    <RadioLineButton
      type="button"
    />
    <RadioLineText>
      Choice Two
    </RadioLineText>
  </RadioLineItem>
  <RadioLineItem
    aria-checked={true}
    index={2}
    key="2"
    onClick={[Function]}
    role="radio"
  >
    <RadioLineButton
      type="button"
    >
      <RadioLineButtonFill
        animate={true}
      />
    </RadioLineButton>
    <RadioLineText>
      Choice Three
    </RadioLineText>
  </RadioLineItem>
</div>
`;

exports[`RadioGroup renders 1`] = `
<div
  aria-labelledby="test"
  name="radio"
  role="radiogroup"
>
  <RadioLineItem
    aria-checked={true}
    index={0}
    key="0"
    onClick={[Function]}
    role="radio"
  >
    <RadioLineButton
      type="button"
    >
      <RadioLineButtonFill
        animate={true}
      />
    </RadioLineButton>
    <RadioLineText>
      Choice One
    </RadioLineText>
  </RadioLineItem>
  <RadioLineItem
    aria-checked={false}
    index={1}
    key="1"
    onClick={[Function]}
    role="radio"
  >
    <RadioLineButton
      type="button"
    />
    <RadioLineText>
      Choice Two
    </RadioLineText>
  </RadioLineItem>
  <RadioLineItem
    aria-checked={false}
    index={2}
    key="2"
    onClick={[Function]}
    role="radio"
  >
    <RadioLineButton
      type="button"
    />
    <RadioLineText>
      Choice Three
    </RadioLineText>
  </RadioLineItem>
</div>
`;

exports[`RadioGroup renders disabled 1`] = `
<RadioGroup
  choices={
    Array [
      Array [
        "choice_one",
        "Choice One",
      ],
    ]
  }
  disabled={true}
  label="test"
  name="radio"
  onChange={[MockFunction]}
  value="choice_one"
>
  <div
    aria-labelledby="test"
    name="radio"
    role="radiogroup"
  >
    <RadioLineItem
      aria-checked={true}
      disabled={true}
      index={0}
      key="0"
      onClick={[Function]}
      role="radio"
    >
      <div
        aria-checked={true}
        className="css-7bssrx-RadioLineItem e1r42lk41"
        onClick={[Function]}
        role="radio"
      >
        <RadioLineButton
          disabled={true}
          type="button"
        >
          <button
            className="css-1ovwgkh-RadioLineButton e1r42lk40"
            disabled={true}
            type="button"
          >
            <RadioLineButtonFill
              animate={true}
              disabled={true}
            >
              <div
                className="css-14bkqla-RadioLineButtonFill e1r42lk42"
              />
            </RadioLineButtonFill>
          </button>
        </RadioLineButton>
        <RadioLineText
          disabled={true}
        >
          <div
            className="css-1lmu4rv-RadioLineText e1r42lk43"
          >
            Choice One
          </div>
        </RadioLineText>
      </div>
    </RadioLineItem>
  </div>
</RadioGroup>
`;
